--- a/web/templates/tutorials/single_tag.html
+++ b/web/templates/tutorials/single_tag.html
@@ -3,32 +3,27 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <title>Tutorials | {{tag.name}} | Anovin</title>
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="UTF-8">
-    <meta content="{{tutorial.meta_description}}" name="description">
-    <title>Tutorials | Python, Javascript, PWA</title>
+    <meta content="Welcome to ANOVIN, your one-stop destination for technology and programming tutorials. Our expert AI instructor and
+          comprehensive tutorials will help you learn the latest technologies and programming languages. Whether you are
+          a beginner or an experienced developer, ANOVIN has something for everyone. Start learning today and take your
+    skills to the next level!" name="description">
 
-    {% include 'head.html' %}
-    <!-- Vendor CSS Files -->
-    <link href="{% static 'assets/vendor/aos/aos.css' %}" rel="stylesheet">
-    <link href="{% static 'assets/vendor/bootstrap/css/bootstrap.min.css' %}" rel="stylesheet">
-    <link href="{% static 'assets/vendor/bootstrap-icons/bootstrap-icons.css' %}" rel="stylesheet">
-    <link href="{% static 'assets/vendor/boxicons/css/boxicons.min.css' %}" rel="stylesheet">
-    <link href="{% static 'assets/vendor/glightbox/css/glightbox.min.css' %}" rel="stylesheet">
-    <link href="{% static 'assets/vendor/swiper/swiper-bundle.min.css' %}" rel="stylesheet">
-    <link href="{% static 'assets/css/style.css' %}" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@700&display=swap" rel="stylesheet">
-
-
-    <meta property="og:site_name" content="https://www.anovin.mk"/>
-    <meta property="og:title" content="ANOVIN"/>
-    <meta property="og:url" content="https://www.anovin.mk"/>
+    <meta property="og:site_name" content="https://anovin.mk"/>
+    <meta property="og:title" content="{{tag.name}}"/>
+    <meta property="og:url" content="https://anovin.mk{{tag.get_absolute_url}}"/>
     <meta property="og:description"
-          content="{{tutorial.meta_description}}"/>
-    <meta property="og:image" content="{% static 'assets/img/2.png' %}"/>
+          content="Welcome to ANOVIN, your one-stop destination for technology and programming tutorials. Our expert AI instructor and
+          comprehensive tutorials will help you learn the latest technologies and programming languages. Whether you are
+          a beginner or an experienced developer, ANOVIN has something for everyone. Start learning today and take your
+    skills to the next level!"/>
+    <meta property="og:image" content="{% static 'img/anovin.png' %}"/>
     <meta property="og:type" content="website"/>
 
+    {% include 'head.html' %}
 
     {% include 'tutorials/g_tag.html' %}
 
