--- a/web/templates/tutorials/single_tutorial.html
+++ b/web/templates/tutorials/single_tutorial.html
@@ -12,7 +12,7 @@
     <meta property="og:title" content="{{tutorial.title}}"/>
     <meta property="og:url" content="https://anovin.mk{{tutorial.get_absolute_url}}"/>
     <meta property="og:description" content="{{tutorial.meta_description}}"/>
-    <meta property="og:image" content="{% static 'assets/img/2.png' %}"/>
+    <meta property="og:image" content="https://anovin.mk{% static 'img/anovin.png' %}"/>
     <meta property="og:type" content="website"/>
 
     {% include 'tutorials/g_tag.html' %}
