--- a/web/templates/tutorials/single_category.html
+++ b/web/templates/tutorials/single_category.html
@@ -20,7 +20,7 @@
           comprehensive tutorials will help you learn the latest technologies and programming languages. Whether you are
           a beginner or an experienced developer, ANOVIN has something for everyone. Start learning today and take your
     skills to the next level!"/>
-    <meta property="og:image" content="{% static 'img/anovin.png' %}"/>
+    <meta property="og:image" content="https://anovin.mk{% static 'img/anovin.png' %}"/>
     <meta property="og:type" content="website"/>
 
     {% include 'tutorials/g_tag.html' %}
