--- a/web/templates/home.html
+++ b/web/templates/home.html
@@ -13,7 +13,7 @@
     <meta property="og:url" content="https://www.anovin.mk"/>
     <meta property="og:description"
           content="Creating Progressive Web Applications(PWA). We plan, create and assemble your solution"/>
-    <meta property="og:image" content="{% static 'img/anovin.png' %}"/>
+    <meta property="og:image" content="https://anovin.mk{% static 'img/anovin.png' %}"/>
     <meta property="og:type" content="website"/>
 
     {% include 'head.html' %}
