--- a/web/templates/head.html
+++ b/web/templates/head.html
@@ -6,8 +6,8 @@
 <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
 
 <!-- Favicons -->
-<link href="{% static 'assets/img/logoo.png' %}" rel="icon">
-<link href="{% static 'assets/img/apple-touch-icon.png' %}" rel="apple-touch-icon">
+<link href="{% static 'assets/img/favicon-anovin.png' %}" rel="icon">
+<link href="{% static 'assets/img/apple-touch-icon-anovin.png' %}" rel="apple-touch-icon">
 
 <!-- Google Fonts -->
 <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Roboto:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i"
