--- a/web/templates/home.html
+++ b/web/templates/home.html
@@ -14,7 +14,11 @@
     <meta property="og:description"
           content="Creating Progressive Web Applications(PWA). We plan, create and assemble your solution"/>
     <meta property="og:image" content="https://anovin.mk{% static 'img/anovin.png' %}"/>
+    <meta property="og:image" content="https://anovin.mk{% static 'img/anovin.png' %}"/>
     <meta property="og:type" content="website"/>
+    <meta property="twitter:card" content="https://anovin.mk{% static 'img/anovin.png' %}">
+    <meta property="twitter:image" content="https://anovin.mk{% static 'img/anovin-512.png' %}">
+
 
     {% include 'head.html' %}
 
