--- a/web/templates/tutorials/single_category.html
+++ b/web/templates/tutorials/single_category.html
@@ -22,6 +22,8 @@
     skills to the next level!"/>
     <meta property="og:image" content="https://anovin.mk{% static 'img/anovin.png' %}"/>
     <meta property="og:type" content="website"/>
+    <meta property="twitter:card" content="https://anovin.mk{% static 'img/anovin.png' %}">
+    <meta property="twitter:image" content="https://anovin.mk{% static 'img/anovin-512.png' %}">
 
     {% include 'tutorials/g_tag.html' %}
     {% include 'head.html' %}
