--- a/web/templates/tutorials/single_tutorial.html
+++ b/web/templates/tutorials/single_tutorial.html
@@ -14,6 +14,9 @@
     <meta property="og:description" content="{{tutorial.meta_description}}"/>
     <meta property="og:image" content="https://anovin.mk{% static 'img/anovin.png' %}"/>
     <meta property="og:type" content="website"/>
+    <meta property="twitter:card" content="https://anovin.mk{% static 'img/anovin.png' %}">
+    <meta property="twitter:image" content="https://anovin.mk{% static 'img/anovin-512.png' %}">
+
 
     {% include 'tutorials/g_tag.html' %}
 </head>
