--- a/web/templates/tutorials/single_tag.html
+++ b/web/templates/tutorials/single_tag.html
@@ -23,7 +23,7 @@
     <meta property="og:image" content="https://anovin.mk{% static 'img/anovin.png' %}"/>
     <meta property="og:type" content="website"/>
     <meta property="twitter:card" content="https://anovin.mk{% static 'img/anovin.png' %}">
-    <meta property="twitter:image" content="https://anovin.mk{% static 'img/anovin-512.png' %}">
+    <meta property="twitter:image" content="https://anovin.mk{% static 'assets/img/anovin-512.png' %}">
 
     {% include 'head.html' %}
 
