--- a/web/templates/tutorials.html
+++ b/web/templates/tutorials.html
@@ -21,6 +21,8 @@
           a beginner or an experienced developer, ANOVIN has something for everyone. Start learning today and take your
     skills to the next level!"/>
     <meta property="og:image" content="https://anovin.mk{% static 'img/anovin.png' %}"/>
+    <meta property="twitter:image" content="https://anovin.mk{% static 'assets/img/anovin-512.png' %}">
+
     <meta property="og:type" content="website"/>
     {% include 'tutorials/g_tag.html' %}
 
