--- a/web/templates/tutorials/single_tutorial.html
+++ b/web/templates/tutorials/single_tutorial.html
@@ -12,10 +12,8 @@
     <meta property="og:title" content="{{tutorial.title}}"/>
     <meta property="og:url" content="https://anovin.mk{{tutorial.get_absolute_url}}"/>
     <meta property="og:description" content="{{tutorial.meta_description}}"/>
-    <meta property="og:image" content="https://anovin.mk{% static 'img/anovin.png' %}"/>
+    <meta property="og:image" content="https://anovin.mk{% static 'img/anovin-og.png' %}"/>
     <meta property="og:type" content="website"/>
-    <meta property="twitter:card" content="https://anovin.mk{% static 'img/anovin.png' %}">
-    <meta property="twitter:image" content="https://anovin.mk{% static 'assets/img/anovin-512.png' %}">
 
 
     {% include 'tutorials/g_tag.html' %}
