--- a/web/templates/menu.html
+++ b/web/templates/menu.html
@@ -1,5 +1,5 @@
 <!-- ======= Top Bar ======= -->
-<section id="topbar" class="d-flex align-items-center">
+<section id="topbar" class="d-flex align-items-center" style="height: 38px;">
     <div class="container d-flex justify-content-center justify-content-md-between">
         <div class="contact-info d-flex align-items-center" style="font-size:20px;">
             <a href="https://github.com/starscream32/jum-journal-system/tree/master" class=" p-1 me-2"><i
