--- a/web/templates/home.html
+++ b/web/templates/home.html
@@ -16,6 +16,8 @@
     <meta property="og:image" content="https://anovin.mk{% static 'img/anovin-og.png' %}"/>
     <meta property="og:type" content="website"/>
 
+    <script async src="https://www.google.com/recaptcha/api.js?onload=onloadCallback"></script>
+
 
     {% include 'head.html' %}
 
@@ -331,6 +333,10 @@
                             <div class="error-message"></div>
                             <div class="sent-message">Your message has been sent. Thank you!</div>
                         </div>
+                        <div class="d-flex justify-content-center align-items-center mt-2 mb-2">
+                            <div class="g-recaptcha" data-sitekey="your_site_key"></div>
+
+                        </div>
                         <div class="text-center">
                             <button type="submit" value="ok">Send Message</button>
                         </div>
@@ -410,6 +416,14 @@
 <div id="preloader"></div>
 <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i
         class="bi bi-arrow-up-short"></i></a>
+
+
+<script>
+    const onloadCallback = function () {
+        console.log("reCAPTCHA has loaded!");
+        grecaptcha.reset();
+    };
+</script>
 
 {% include 'main_scripts.html' %}
 <script>
