--- a/web/templates/home.html
+++ b/web/templates/home.html
@@ -334,7 +334,7 @@
                             <div class="sent-message">Your message has been sent. Thank you!</div>
                         </div>
                         <div class="d-flex justify-content-center align-items-center mt-2 mb-2">
-                            <div class="g-recaptcha" data-sitekey="your_site_key"></div>
+                            <div class="g-recaptcha" data-sitekey="6LdtXaQjAAAAAEQcYB3V5xCrokqG95M-9LzkOk_D"></div>
 
                         </div>
                         <div class="text-center">
