--- a/web/templates/tutorials/single_tutorial.html
+++ b/web/templates/tutorials/single_tutorial.html
@@ -107,7 +107,7 @@
                 {% if request.user.is_superuser %}
                 <a href="http://127.0.0.1:8002/admin/web/tutorial/{{tutorial.id}}/change/" target="_blank" class="mb-4 ">
                     <button class="btn btn-success w-100 mb">
-                        <h4 class="text-light">Edit tutorial</h4>
+                        <h4 class="text-light" style="font-weight:300;">Edit tutorial</h4>
                     </button>
                 </a>
                 {% else %}
