--- a/web/templates/tutorials/footer.html
+++ b/web/templates/tutorials/footer.html
@@ -7,7 +7,7 @@
         <div class="newsletter d-flex align-items-center justify-content-center">
             {% csrf_token %}
             <input type="email" class="form-control" placeholder="e-mail address" id="subscribe-input">
-            <button class="p-1 btn-primary ps-3 pe-3" style="height: 37px; border-radius: 3px; margin-left:-5px;"
+            <button class="p-1 ps-3 pe-3 border" style="height: 37px; border-radius: 3px; margin-left:-5px; background: white; border:0; font-family: 'Josefin Sans', sans-serif;"
                     id="join">Join
             </button>
         </div>
