--- a/web/static/assets/css/style.css
+++ b/web/static/assets/css/style.css
@@ -14,7 +14,7 @@ body {
 }
 
 a {
-    color: #106eea;
+    color: #253f62;
     text-decoration: none;
 }
 
@@ -46,7 +46,7 @@ h1, h2, h3, h4, h5, h6 {
     position: fixed;
     top: calc(50% - 30px);
     left: calc(50% - 30px);
-    border: 6px solid #106eea;
+    border: 6px solid #253f62;
     border-top-color: #e2eefd;
     border-radius: 50%;
     width: 60px;
@@ -83,7 +83,7 @@ h1, h2, h3, h4, h5, h6 {
     right: 15px;
     bottom: 15px;
     z-index: 996;
-    background: #106eea;
+    background: #253f62;
     width: 40px;
     height: 40px;
     border-radius: 4px;
@@ -119,7 +119,7 @@ h1, h2, h3, h4, h5, h6 {
 # Top Bar
 --------------------------------------------------------------*/
 #topbar {
-    background: #106eea;
+    background: #253f62;
     height: 38px;
     font-size: 10px;
     transition: all 0.5s;
@@ -199,7 +199,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 #header .logo a span {
-    color: #106eea;
+    color: #253f62;
 }
 
 #header .logo img {
@@ -263,7 +263,7 @@ h1, h2, h3, h4, h5, h6 {
     height: 2px;
     bottom: -6px;
     left: 0;
-    background-color: #106eea;
+    background-color: #253f62;
     visibility: hidden;
     width: 0px;
     transition: all 0.3s ease-in-out 0s;
@@ -275,7 +275,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .navbar a:hover, .navbar .active, .navbar .active:focus, .navbar li:hover > a {
-    color: #106eea;
+    color: #253f62;
 }
 
 .navbar .dropdown ul {
@@ -307,7 +307,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .navbar .dropdown ul a:hover, .navbar .dropdown ul .active:hover, .navbar .dropdown ul li:hover > a {
-    color: #106eea;
+    color: #253f62;
 }
 
 .navbar .dropdown:hover > ul {
@@ -412,7 +412,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .navbar-mobile a:hover, .navbar-mobile .active, .navbar-mobile li:hover > a {
-    color: #106eea;
+    color: #253f62;
 }
 
 .navbar-mobile .getstarted {
@@ -444,7 +444,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .navbar-mobile .dropdown ul a:hover, .navbar-mobile .dropdown ul .active:hover, .navbar-mobile .dropdown ul li:hover > a {
-    color: #106eea;
+    color: #253f62;
 }
 
 .navbar-mobile .dropdown > .dropdown-active {
@@ -486,7 +486,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 #hero h1 span {
-    color: #106eea;
+    color: #253f62;
 }
 
 #hero h2 {
@@ -507,7 +507,7 @@ h1, h2, h3, h4, h5, h6 {
     border-radius: 4px;
     transition: 0.5s;
     color: #fff;
-    background: #106eea;
+    background: #253f62;
 }
 
 #hero .btn-get-started:hover {
@@ -525,7 +525,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 #hero .btn-watch-video i {
-    color: #106eea;
+    color: #253f62;
     font-size: 32px;
     transition: 0.3s;
     line-height: 0;
@@ -533,7 +533,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 #hero .btn-watch-video:hover {
-    color: #106eea;
+    color: #253f62;
 }
 
 #hero .btn-watch-video:hover i {
@@ -597,7 +597,7 @@ section {
     padding: 8px 20px;
     margin: 0;
     background: #e7f1fd;
-    color: #106eea;
+    color: #253f62;
     display: inline-block;
     text-transform: uppercase;
     border-radius: 50px;
@@ -610,7 +610,7 @@ section {
 }
 
 .section-title h3 span {
-    color: #106eea;
+    color: #253f62;
 }
 
 .section-title p {
@@ -706,7 +706,7 @@ section {
 }
 
 .featured-services .icon-box:hover::before {
-    background: #106eea;
+    background: #253f62;
     top: 0;
     border-radius: 0px;
 }
@@ -718,7 +718,7 @@ section {
 .featured-services .icon i {
     font-size: 48px;
     line-height: 1;
-    color: #106eea;
+    color: #253f62;
     transition: all 0.3s ease-in-out;
 }
 
@@ -775,7 +775,7 @@ section {
     font-size: 24px;
     padding: 20px;
     margin-right: 15px;
-    color: #106eea;
+    color: #253f62;
     border-radius: 50px;
 }
 
@@ -826,7 +826,7 @@ section {
     width: 1px;
     height: 10px;
     transition: .9s;
-    background-color: #106eea;
+    background-color: #253f62;
 }
 
 /*--------------------------------------------------------------
@@ -850,7 +850,7 @@ section {
     left: 50%;
     transform: translateX(-50%);
     font-size: 24px;
-    background: #106eea;
+    background: #253f62;
     color: #fff;
     width: 56px;
     height: 56px;
@@ -957,11 +957,11 @@ section {
 }
 
 .services .icon-box:hover h4 a, .services .icon-box:hover .icon i {
-    color: #106eea;
+    color: #253f62;
 }
 
 .services .icon-box:hover .icon {
-    border-color: #106eea;
+    border-color: #253f62;
 }
 
 /*--------------------------------------------------------------
@@ -1051,7 +1051,7 @@ section {
 }
 
 .testimonials .swiper-pagination .swiper-pagination-bullet-active {
-    background-color: #106eea;
+    background-color: #253f62;
 }
 
 @media (min-width: 992px) {
@@ -1086,7 +1086,7 @@ section {
 }
 
 .portfolio #portfolio-flters li:hover, .portfolio #portfolio-flters li.filter-active {
-    color: #106eea;
+    color: #253f62;
 }
 
 .portfolio #portfolio-flters li:last-child {
@@ -1131,7 +1131,7 @@ section {
 }
 
 .portfolio .portfolio-item .portfolio-info .preview-link:hover, .portfolio .portfolio-item .portfolio-info .details-link:hover {
-    color: #106eea;
+    color: #253f62;
 }
 
 .portfolio .portfolio-item .portfolio-info .details-link {
@@ -1186,11 +1186,11 @@ section {
     height: 12px;
     background-color: #fff;
     opacity: 1;
-    border: 1px solid #106eea;
+    border: 1px solid #253f62;
 }
 
 .portfolio-details .portfolio-details-slider .swiper-pagination .swiper-pagination-bullet-active {
-    background-color: #106eea;
+    background-color: #253f62;
 }
 
 .portfolio-details .portfolio-info {
@@ -1337,7 +1337,7 @@ section {
 
 .pricing .box h4 {
     font-size: 36px;
-    color: #106eea;
+    color: #253f62;
     font-weight: 600;
     font-family: "Poppins", sans-serif;
     margin-bottom: 20px;
@@ -1369,7 +1369,7 @@ section {
 }
 
 .pricing .box ul i {
-    color: #106eea;
+    color: #253f62;
     font-size: 18px;
     padding-right: 4px;
 }
@@ -1387,7 +1387,7 @@ section {
 }
 
 .pricing .btn-buy {
-    background: #106eea;
+    background: #253f62;
     display: inline-block;
     padding: 8px 35px 10px 35px;
     border-radius: 4px;
@@ -1406,7 +1406,7 @@ section {
 
 .pricing .featured h3 {
     color: #fff;
-    background: #106eea;
+    background: #253f62;
 }
 
 .pricing .advanced {
@@ -1418,7 +1418,7 @@ section {
     z-index: 1;
     font-size: 14px;
     padding: 1px 0 3px 0;
-    background: #106eea;
+    background: #253f62;
     color: #fff;
 }
 
@@ -1473,7 +1473,7 @@ section {
 }
 
 .faq .faq-list .collapsed:hover {
-    color: #106eea;
+    color: #253f62;
 }
 
 .faq .faq-list .collapsed .icon-show {
@@ -1498,7 +1498,7 @@ section {
 
 .contact .info-box i {
     font-size: 32px;
-    color: #106eea;
+    color: #253f62;
     border-radius: 50%;
     padding: 8px;
     border: 2px dotted #b3d1fa;
@@ -1576,7 +1576,7 @@ section {
 }
 
 .contact .php-email-form input:focus, .contact .php-email-form textarea:focus {
-    border-color: #106eea;
+    border-color: #253f62;
 }
 
 .contact .php-email-form input {
@@ -1588,7 +1588,7 @@ section {
 }
 
 .contact .php-email-form button[type="submit"] {
-    background: #106eea;
+    background: #253f62;
     border: 0;
     padding: 10px 30px;
     color: #fff;
@@ -1669,7 +1669,7 @@ section {
     background: none;
     font-size: 16px;
     padding: 0 20px;
-    background: #106eea;
+    background: #253f62;
     color: #fff;
     transition: 0.3s;
     border-radius: 0 4px 4px 0;
@@ -1701,7 +1701,7 @@ section {
 }
 
 #footer .footer-top .footer-contact h3 span {
-    color: #106eea;
+    color: #253f62;
 }
 
 #footer .footer-top .footer-contact p {
@@ -1732,7 +1732,7 @@ section {
 
 #footer .footer-top .footer-links ul i {
     padding-right: 2px;
-    color: #106eea;
+    color: #253f62;
     font-size: 18px;
     line-height: 1;
 }
@@ -1756,13 +1756,13 @@ section {
 
 #footer .footer-top .footer-links ul a:hover {
     text-decoration: none;
-    color: #106eea;
+    color: #253f62;
 }
 
 #footer .footer-top .social-links a {
     font-size: 18px;
     display: inline-block;
-    background: #106eea;
+    background: #253f62;
     color: #fff;
     line-height: 1;
     padding: 8px 0;
