--- a/web/templates/home.html
+++ b/web/templates/home.html
@@ -305,7 +305,7 @@
             <div class="row align-items-center" data-aos="fade-up" data-aos-delay="100">
 
                 <div class="col-lg-6 align-items-center ">
-                    <lottie-player src="https://assets2.lottiefiles.com/packages/lf20_u25cckyh.json"
+                    <lottie-player src="https://lottie.host/773aff89-ba64-48bf-b6e4-93abc808ce4a/J2M9BIIWad.json"
                                    background="transparent" speed="0.35" style="width: 100%; height: auto;" loop
                                    autoplay></lottie-player>
                 </div>
