--- a/web/templates/tutorials/single_category.html
+++ b/web/templates/tutorials/single_category.html
@@ -85,6 +85,7 @@
          style="border-radius:10px;">
 
         <h1 class="mt-4 mb-3" align="center">Explore our tutorial database</h1>
+        <h2 style="font-family: 'Josefin Sans', sans-serif;">Category: {{cat}}</h2>
 
         <div class="w-100" style="margin-bottom:30px;">
             <form method="get" action="{% url 'tutorials' %}" class="d-flex  flex-column flex-md-row">
@@ -110,8 +111,8 @@
                         <span class="shadow-sm  p-1 pe-2 ps-2  me-2 mb-1 mt-1 cat-text "
                               style="border-radius: 8px; font-size: 16px; ">{{ t.category }}</span>
                         {% for tag in t.tags.all %}
-                        <span class="shadow-sm p-2 bg-primary me-2 mb-1 mt-1"
-                              style="border-radius: 8px; font-size: 10px; font-weight: 800; color:white;"> {{ tag.name }}</span>
+                        <span class="shadow-sm p-2 me-2 mb-1 mt-1"
+                              style="border-radius: 8px; font-size: 10px; font-weight: 800; color:saddlebrown;"> {{ tag.name }}</span>
                         {% endfor %}
                     </div>
 
