--- a/web/templates/tutorials/single_tutorial.html
+++ b/web/templates/tutorials/single_tutorial.html
@@ -361,6 +361,7 @@
     let hr = document.createElement('div')
     hr.innerText = 'We use AI to deliver in depth tutorials and solutions. Please provide feedback so we can improve the model.'
     hr.style.fontSize = '13px'
+    hr.style.marginBottom = '15px'
     feedbackWidget.appendChild(hr)
 
 </script>
