--- a/web/templates/tutorials/single_tag.html
+++ b/web/templates/tutorials/single_tag.html
@@ -93,8 +93,8 @@
                 <input id='instantSearch' type="text" class="form-control  w-100 shadow-sm  mt-3"
                        style="border-radius: 8px; height: 40px; "
                        placeholder="Search" name="instant_search">
-                <button type="submit" class="btn mt-3 shadow-sm btn-outline-primary search-button float-end ms-md-3"
-                        style="border-radius: 8px;">Search
+                <button type="submit" class="btn mt-3 shadow-sm border search-button float-end ms-md-3"
+                        style="border-radius: 8px;color: #253f62; background: transparent;">Search
                 </button>
             </form>
 
