--- a/web/templates/head.html
+++ b/web/templates/head.html
@@ -25,6 +25,8 @@
 <!-- Template Main CSS File -->
 <link href="{% static 'assets/css/style.css' %}" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@700&display=swap" rel="stylesheet">
+
+<meta name="yandex-verification" content="d50f7230987d324c" />
 <!-- =======================================================
 * Template Name: BizLand - v3.3.0
 * Template URL: https://bootstrapmade.com/bizland-bootstrap-business-template/
